json server 02 - delete requests + full text search

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <a href="/create.html">Add a new blog</a>
         </nav>
 
+        <form class="search">
+            <input type="text" name="term" placeHolder="search term">
+        </form>
+
         <div class="blogs">
             <!-- inject blogs here from js -->
         </div>
